fixed spacing error on project cards

--- a/src/App.css
+++ b/src/App.css
@@ -41,27 +41,70 @@ h5 {
   border: none;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
 
-.dropdown:hover .dropdown-content {display: block;}
+/* DROPDOWN
+============================================ */
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+.dd-wrapper {
+  display: flex;
+  min-height: 38px;
+  flex-wrap: wrap;
 
-.dropdown-content a:hover {background-color: #ddd;}
+  .dd-header {
+    @include styling();
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    width: 100%;
+    padding: 0 20px;
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    &__title--bold {
+      font-weight: bold;
+    }
+  }
+
+  .dd-list {
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075) !important;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    margin-top: 20px;
+
+    li {
+      list-style-type: none;
+
+      &:first-of-type {
+        > button {
+          border-top: 1px solid #ccc;
+          border-top-left-radius: 4px;
+          border-top-right-radius: 4px;
+        }
+      }
+
+      &:last-of-type > button {
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+      }
+
+      button {
+        display: flex;
+        justify-content: space-between;
+        background-color: white;
+        font-size: 16px;
+        padding: 15px 20px 15px 20px;
+        border: 0;
+        border-bottom: 1px solid #ccc;
+        width: 100%;
+        text-align: left;
+        border-left: 1px solid #ccc;
+        border-right: 1px solid #ccc;
+
+        &:hover, &:focus {
+          cursor: pointer;
+          font-weight: bold;
+          background-color: #ccc;
+        }
+      }
+    }
+  }
 }
